# kanboard-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md  claude_desktop_config_options.json  run_server.sh
src/kanboard_mcp/: __init__.py  client.py  config.py  server.py
src/kanboard_mcp/tools/: __init__.py  boards.py  categories.py  columns.py  comments.py  files.py  links.py  projects.py  subtasks.py  tags.py  tasks.py  users.py
